--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,30 @@
 @import 'tailwindcss/utilities';
 @import '@radix-ui/themes/styles.css';
 
+@font-face {
+  font-family: 'GT America Trial';
+  src: url('/fonts/GT-America-Standard-Regular-Trial.otf') format('opentype');
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'GT America Trial';
+  src: url('/fonts/GT-America-Standard-Medium-Trial.otf') format('opentype');
+  font-style: normal;
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'GT America Trial';
+  src: url('/fonts/GT-America-Standard-Bold-Trial.otf') format('opentype');
+  font-style: normal;
+  font-weight: bold;
+}
+
+body {
+  font-family: 'GT America Trial', sans-serif;
+}
 
 @layer utilities {
   .text-balance {
