--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,32 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import '@radix-ui/themes/styles.css';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "@radix-ui/themes/styles.css";
 
 @font-face {
-  font-family: 'GT America Trial';
-  src: url('/fonts/GT-America-Standard-Regular-Trial.otf') format('opentype');
+  font-family: "GT America Trial";
+  src: url("/fonts/GT-America-Standard-Regular-Trial.otf") format("opentype");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
-  font-family: 'GT America Trial';
-  src: url('/fonts/GT-America-Standard-Medium-Trial.otf') format('opentype');
+  font-family: "GT America Trial";
+  src: url("/fonts/GT-America-Standard-Medium-Trial.otf") format("opentype");
   font-style: normal;
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'GT America Trial';
-  src: url('/fonts/GT-America-Standard-Bold-Trial.otf') format('opentype');
+  font-family: "GT America Trial";
+  src: url("/fonts/GT-America-Standard-Bold-Trial.otf") format("opentype");
   font-style: normal;
   font-weight: bold;
 }
 
 body {
-  font-family: 'GT America Trial', sans-serif;
+  font-family: "GT America Trial", sans-serif;
+  height: 100%;
 }
 
 @layer utilities {
