--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
 
 @font-face {
   font-family: "GT America Trial";
+  src: url("/fonts/GT-America-Standard-Light-Trial.otf") format("opentype");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "GT America Trial";
   src: url("/fonts/GT-America-Standard-Regular-Trial.otf") format("opentype");
   font-style: normal;
   font-weight: normal;
