--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,56 +4,48 @@
 @import "@radix-ui/themes/styles.css";
 
 @font-face {
-  font-family: "GT America Trial";
+  font-family: "GT-America";
   src: url("/fonts/GT-America-Standard-Light-Trial.woff") format("woff");
   font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
-  font-family: "GT America Trial";
+  font-family: "GT-America";
   src: url("/fonts/GT-America-Standard-Regular-Trial.woff") format("woff");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "GT America Trial";
+  font-family: "GT-America";
   src: url("/fonts/GT-America-Standard-Medium-Trial.woff") format("woff");
   font-style: normal;
   font-weight: 500;
 }
 
 @font-face {
-  font-family: "GT America Trial";
+  font-family: "GT-America";
   src: url("/fonts/GT-America-Standard-Bold-Trial.woff") format("woff");
   font-style: normal;
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "GT America Mono Trial";
+  font-family: "GT-America-Mono";
   src: url("/fonts/GT-America-Mono-Regular-Trial.woff") format("woff");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "GT Americal Extended Trial";
+  font-family: "GT-America-Extended";
   src: url("/fonts/GT-America-Extended-Regular-Trial.woff") format("woff");
   font-style: normal;
   font-weight: normal;
 }
 
-@font-face {
-  font-family: "GT Americal Extended Trial";
-  src: url("/fonts/GT-America-Extended-Bold-Trial.woff") format("woff");
-  font-style: normal;
-  font-weight: bold;
-}
-
 body {
-  font-family: "GT America Trial", sans-serif;
   background-color: #f5f1eb;
   height: 100%;
 }
